--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "module": "src/index.ts",
   "scripts": {
+    "dev": "bun --watch src/index.ts",
     "start": "bun src/index.ts",
     "format": "prettier --write .",
     "lint": "eslint",
@@ -14,10 +15,17 @@
   },
   "dependencies": {
     "@antfu/eslint-config": "^4.16.1",
+    "@grammyjs/i18n": "^1.1.2",
+    "@libsql/client": "^0.15.9",
+    "better-sqlite3": "^12.2.0",
+    "drizzle-kit": "^0.31.4",
+    "drizzle-orm": "^0.44.2",
     "eslint": "^9.30.0",
     "grammy": "^1.36.3",
+    "pino": "^9.7.0",
     "prettier": "^3.6.2",
-    "valibot": "^1.1.0"
+    "valibot": "^1.1.0",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@types/bun": "latest",
