--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "drizzle-orm": "^0.44.2",
     "eslint": "^9.30.0",
     "grammy": "^1.36.3",
-    "pino": "^9.7.0",
     "prettier": "^3.6.2",
     "valibot": "^1.1.0",
     "winston": "^3.17.0"
@@ -30,7 +29,8 @@
   "devDependencies": {
     "@types/bun": "latest",
     "eslint-plugin-import": "^2.32.0",
-    "eslint-plugin-simple-import-sort": "^12.1.1"
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "husky": "^9.1.7"
   },
   "lint-staged": {
     "./**/*.{ts,js}": [
