--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint": "^9.30.0",
     "grammy": "^1.36.3",
     "prettier": "^3.6.2",
+    "up-fetch": "^2.1.6",
     "valibot": "^1.1.0",
     "winston": "^3.17.0"
   },
